--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1938,7 +1938,6 @@ payload:
   - '+.21fid.com'
   - '+.21food.com'
   - '+.21ge2.com'
-  - '+.21hh.com'
   - '+.21hubei.com'
   - '+.21hubei.net'
   - '+.21ic.com'
@@ -4053,7 +4052,6 @@ payload:
   - '+.51zishentang.com'
   - '+.51zixuewang.com'
   - '+.51zjxm.com'
-  - '+.51zkzx.com'
   - '+.51zmt.net'
   - '+.51zr.com'
   - '+.51zsjc.com'
@@ -5606,7 +5604,6 @@ payload:
   - '+.7pei.com'
   - '+.7po.com'
   - '+.7q5.com'
-  - '+.7qcbq1hu.com'
   - '+.7qile.com'
   - '+.7r7z.com'
   - '+.7road.com'
@@ -10085,7 +10082,6 @@ payload:
   - '+.beike21.com'
   - '+.beikeapp.com'
   - '+.beikeba.com'
-  - '+.beikeit.com'
   - '+.beikeread.com'
   - '+.beikongyun.com'
   - '+.beileike.com'
@@ -11456,7 +11452,6 @@ payload:
   - '+.brtbeacon.com'
   - '+.brtbeacon.net'
   - '+.bruceit.com'
-  - '+.brunomar.com'
   - '+.brunoxu.com'
   - '+.bryonypie.com'
   - '+.brzhang.club'
@@ -15764,7 +15759,6 @@ payload:
   - '+.coolaf.com'
   - '+.coolapk.com'
   - '+.coolapkmarket.com'
-  - '+.coolbook.cc'
   - '+.coolbuy.com'
   - '+.coolchuan.com'
   - '+.coolcode.org'
@@ -15779,7 +15773,6 @@ payload:
   - '+.coolexe.com'
   - '+.coolfd.com'
   - '+.coolgamebox.com'
-  - '+.coolgigllc.com'
   - '+.coolgua.net'
   - '+.coolkit.cc'
   - '+.coolkk.net'
@@ -15825,7 +15818,6 @@ payload:
   - '+.copymanga.org'
   - '+.cor-games.com'
   - '+.corachic.com'
-  - '+.coralsec.com'
   - '+.corebai.com'
   - '+.coreesports.net'
   - '+.coreldrawchina.com'
@@ -18194,7 +18186,6 @@ payload:
   - '+.djzhj.com'
   - '+.djzr88.com'
   - '+.djzxn47.com'
-  - '+.dkazpc.cfd'
   - '+.dkdangle.com'
   - '+.dkjiaoyang.com'
   - '+.dklogs.net'
@@ -21711,7 +21702,6 @@ payload:
   - '+.flashgame163.com'
   - '+.flashgene.com'
   - '+.flashgirlz.com'
-  - '+.flashgoing.com'
   - '+.flashmemoryworld.com'
   - '+.flashv8.com'
   - '+.flashwar.com'
@@ -21736,7 +21726,6 @@ payload:
   - '+.florentiavillage.com'
   - '+.flower188.com'
   - '+.flower33.com'
-  - '+.flowerpassword.com'
   - '+.flowever.net'
   - '+.flowportal.com'
   - '+.flpsz.com'
@@ -21791,7 +21780,6 @@ payload:
   - '+.fmbimg.com'
   - '+.fmcoprc.gov.mo'
   - '+.fminers.com'
-  - '+.fmketang.com'
   - '+.fmpan.com'
   - '+.fmsh.com'
   - '+.fmtol.com'
@@ -24755,6 +24743,7 @@ payload:
   - '+.haima.me'
   - '+.haima001.com'
   - '+.haimacloud.com'
+  - '+.haimaiyun.com'
   - '+.haimawan.com'
   - '+.haimi.com'
   - '+.haimini.com'
@@ -25837,7 +25826,6 @@ payload:
   - '+.hengdayun.com'
   - '+.hengdianfilm.com'
   - '+.hengdianworld.com'
-  - '+.hengdongli.com'
   - '+.hengdu.cc'
   - '+.hengdulaw.com'
   - '+.hengfujz.com'
@@ -26026,7 +26014,6 @@ payload:
   - '+.hglaser.com'
   - '+.hgmai.com'
   - '+.hgnc.net'
-  - '+.hgy413.com'
   - '+.hgyjs.com'
   - '+.hgyx.cc'
   - '+.hgzdq.com'
@@ -27172,7 +27159,6 @@ payload:
   - '+.huahuo.com'
   - '+.huaibaobei.com'
   - '+.huaibei.com'
-  - '+.huaidan1.com'
   - '+.huaien.com'
   - '+.huaihai.tv'
   - '+.huaijiufu.com'
@@ -27620,7 +27606,6 @@ payload:
   - '+.hulanap.com'
   - '+.hulianmaibo.com'
   - '+.hulinhong.com'
-  - '+.huliqun.com'
   - '+.huliyx.com'
   - '+.huluboshi.com'
   - '+.huluip.tech'
@@ -28010,7 +27995,6 @@ payload:
   - '+.hyuuhit.com'
   - '+.hyyf.net'
   - '+.hyyoa.com'
-  - '+.hyypsb.com'
   - '+.hyzcservice.com'
   - '+.hyzkjh.com'
   - '+.hyzm.cc'
@@ -29865,7 +29849,6 @@ payload:
   - '+.iteblog.com'
   - '+.itechate.com'
   - '+.itedou.com'
-  - '+.iteedu.com'
   - '+.iteer.net'
   - '+.itek-training.com'
   - '+.itelly.net'
@@ -30937,7 +30920,6 @@ payload:
   - '+.jiemeng8.com'
   - '+.jiemian.com'
   - '+.jiemo.net'
-  - '+.jiemo8.com'
   - '+.jiemodui.com'
   - '+.jiemoselect.com'
   - '+.jiepaids.com'
@@ -30951,7 +30933,6 @@ payload:
   - '+.jieshu.me'
   - '+.jieshui8.com'
   - '+.jieshuwang.com'
-  - '+.jieti5.com'
   - '+.jietu365.com'
   - '+.jietuhb.com'
   - '+.jietuosh.com'
@@ -31425,7 +31406,6 @@ payload:
   - '+.jiuxian.com'
   - '+.jiuxianfeng.com'
   - '+.jiuxihuan.net'
-  - '+.jiuxin56.com'
   - '+.jiuxinban.com'
   - '+.jiuxing.com'
   - '+.jiuxusb.com'
@@ -32274,7 +32254,6 @@ payload:
   - '+.junshis.com'
   - '+.junshishu.com'
   - '+.junshitt.com'
-  - '+.junshitx.com'
   - '+.junsw.com'
   - '+.junsz.com'
   - '+.juntongtian.com'
@@ -33007,7 +32986,6 @@ payload:
   - '+.kejitai.com'
   - '+.kejiwang.cc'
   - '+.kejiwanjia.com'
-  - '+.kejixun.com'
   - '+.kejudati.com'
   - '+.kekaku.com'
   - '+.kekaoxing.com'
@@ -33841,7 +33819,6 @@ payload:
   - '+.kuke99.com'
   - '+.kukecloud.com'
   - '+.kukseo.com'
-  - '+.kukud.net'
   - '+.kukulv.com'
   - '+.kukumai.com'
   - '+.kukupig.com'
@@ -34455,7 +34432,6 @@ payload:
   - '+.layabox.com'
   - '+.layoutad.com'
   - '+.laysky.com'
-  - '+.layui-inc.com'
   - '+.layui.com'
   - '+.layuicdn.com'
   - '+.lazada.co.id'
@@ -34789,7 +34765,6 @@ payload:
   - '+.lequ.com'
   - '+.lequ7.com'
   - '+.lequgo.com'
-  - '+.lequxs.com'
   - '+.lequyuanyi.com'
   - '+.lequz.com'
   - '+.lerengu.com'
@@ -34867,7 +34842,6 @@ payload:
   - '+.lexue8.com'
   - '+.lexueying.com'
   - '+.lexun.com'
-  - '+.lexun365.com'
   - '+.leyantech.com'
   - '+.leyaoyao.com'
   - '+.leyaoyao.org'
@@ -36939,7 +36913,6 @@ payload:
   - '+.manben.com'
   - '+.manboker.com'
   - '+.mandao-tech.com'
-  - '+.mandarincapital.net'
   - '+.mandarinedu.org'
   - '+.mandarinhouse.com'
   - '+.mandian.com'
@@ -38395,7 +38368,6 @@ payload:
   - '+.moezu.com'
   - '+.moezx.cc'
   - '+.mofa.com'
-  - '+.mofanbaby.com'
   - '+.mofang.com'
   - '+.mofang.jp'
   - '+.mofangge.com'
@@ -38632,7 +38604,6 @@ payload:
   - '+.moyimusic.com'
   - '+.moyoutang.com'
   - '+.moyoyo.com'
-  - '+.moyuba.com'
   - '+.moyublog.com'
   - '+.moyugroup.com'
   - '+.moyumedia.com'
@@ -40205,7 +40176,6 @@ payload:
   - '+.npxsw.com'
   - '+.npz.com'
   - '+.nq6.com'
-  - '+.nqjzat.cfd'
   - '+.nr-esc.com'
   - '+.nrdzqwd.com'
   - '+.nrec.com'
@@ -40440,7 +40410,6 @@ payload:
   - '+.oauto.com'
   - '+.ob-park.com'
   - '+.obagame.com'
-  - '+.obcuntu.com'
   - '+.obesu.com'
   - '+.obins.net'
   - '+.obj6.com'
@@ -41465,6 +41434,7 @@ payload:
   - '+.pcgeshi.com'
   - '+.pcgogo.com'
   - '+.pch.pub'
+  - '+.pchealthcheck.net'
   - '+.pchome.com'
   - '+.pchome.net'
   - '+.pchpic.net'
@@ -42700,7 +42670,6 @@ payload:
   - '+.qcloudtiw.com'
   - '+.qcloudwzgj.com'
   - '+.qcloudzygj.com'
-  - '+.qcmoke.site'
   - '+.qcmrjx.com'
   - '+.qcmuzhi.com'
   - '+.qcoco.com'
@@ -42837,7 +42806,6 @@ payload:
   - '+.qgggxxw.com'
   - '+.qgpx.com'
   - '+.qgren.com'
-  - '+.qgsdue.cfd'
   - '+.qgsydw.com'
   - '+.qgtql.com'
   - '+.qgvps.com'
@@ -42872,7 +42840,6 @@ payload:
   - '+.qhea.com'
   - '+.qhee-ma.com'
   - '+.qhee.com'
-  - '+.qheunv.cfd'
   - '+.qhfx.net'
   - '+.qhgxq.com'
   - '+.qhgy.net'
@@ -43383,7 +43350,6 @@ payload:
   - '+.qitete.com'
   - '+.qiti88.com'
   - '+.qitian-tech.com'
-  - '+.qitian.biz'
   - '+.qitiancom.com'
   - '+.qitongxq.com'
   - '+.qitoon.com'
@@ -44974,7 +44940,6 @@ payload:
   - '+.rss.ink'
   - '+.rsscc.com'
   - '+.rssmeet.com'
-  - '+.rssmv.com'
   - '+.rsty77.com'
   - '+.rsuedu.com'
   - '+.rsw163.com'
@@ -45294,7 +45259,6 @@ payload:
   - '+.sakesi.club'
   - '+.sakway.com'
   - '+.salasolo.com'
-  - '+.salemsouthbaltimore.org'
   - '+.saleoilpaintings.com'
   - '+.salogs.com'
   - '+.salonglong.com'
@@ -47915,7 +47879,6 @@ payload:
   - '+.snsyx.com'
   - '+.snto.com'
   - '+.snupg.com'
-  - '+.snwefs.com'
   - '+.snxw.com'
   - '+.snyu.com'
   - '+.snzfj.net'
@@ -49397,7 +49360,6 @@ payload:
   - '+.szhgh.com'
   - '+.szhh8.com'
   - '+.szhiross.com'
-  - '+.szhisj.com'
   - '+.szhk.com'
   - '+.szhkhui.com'
   - '+.szhlodz.com'
@@ -49640,7 +49602,6 @@ payload:
   - '+.taidu.com'
   - '+.taig.com'
   - '+.taigaoxiao.com'
-  - '+.taiguoyu.com'
   - '+.taihaikj.com'
   - '+.taihainet.com'
   - '+.taihaocn.com'
@@ -54119,7 +54080,6 @@ payload:
   - '+.weibohelper.com'
   - '+.weiboi.com'
   - '+.weibopay.com'
-  - '+.weibopie.com'
   - '+.weiboreach.com'
   - '+.weiboyi.com'
   - '+.weibusi.net'
@@ -56172,6 +56132,7 @@ payload:
   - '+.x5dj.com'
   - '+.x64go.com'
   - '+.x64pro.com'
+  - '+.x66597.com'
   - '+.x6d.com'
   - '+.x6kj.com'
   - '+.x6x8.com'
@@ -56367,7 +56328,6 @@ payload:
   - '+.xcphzs.com'
   - '+.xcq2022.com'
   - '+.xcqxcq.com'
-  - '+.xcrvie.cfd'
   - '+.xcrxykl.com'
   - '+.xcsfcjyw.com'
   - '+.xcshaifen.com'
@@ -57893,8 +57853,6 @@ payload:
   - '+.xn--2krw29cdqai43k.com'
   - '+.xn--4qr912ma.com'
   - '+.xn--55qx5d'
-  - '+.xn--6rt008ee0k3ua.com'
-  - '+.xn--6rt008ee0k3ua.net'
   - '+.xn--7dvw26h.xn--ses554g'
   - '+.xn--7hv285el2dtof.com'
   - '+.xn--chq7lp8e46htw3g.com'
