--- a/process.yaml
+++ b/process.yaml
@@ -90,7 +90,7 @@ payload:
   - DOMAIN-SUFFIX, amdc.m.taobao.com
   - DOMAIN-SUFFIX, accscdn.m.taobao.com
   - DOMAIN-SUFFIX, adashx.m.taobao.com
-  - DOMAIN-SUFFIX, devs.data.mob.com
+  # - DOMAIN-SUFFIX, devs.data.mob.com
 
  # macOS
 
