--- a/process.yaml
+++ b/process.yaml
@@ -68,6 +68,7 @@ payload:
   - PROCESS-NAME, com.seetong.app.seetong #天视通
   - PROCESS-NAME, com.yanjiuiot.app.chelianxing #GPS
   - PROCESS-NAME, com.eusoft.ting.en #每日英语听力
+  - PROCESS-NAME, com.maimemo.android.momo #墨墨背单词
 
   - PROCESS-NAME, cn.xuexi.android #学习强国
   - PROCESS-NAME, com.MobileTicket #12306
