--- a/.github/workflows/clash-rule.yml
+++ b/.github/workflows/clash-rule.yml
@@ -23,8 +23,8 @@ jobs:
       
     - name: Run BanAD rules
       run: | 
-        curl -s https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-domains.txt | sed -e '/#/d' -e 's/^/+./' > reject.txt
-        curl -s https://raw.githubusercontent.com/Loyalsoldier/v2ray-rules-dat/release/reject-list.txt | sed 's/^/+./' >> reject.txt
+        curl -s https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-domains.txt | sed -e '/#/d' -e "s/^/'+./"  -e "s/$/'/" > reject.txt
+        curl -s https://raw.githubusercontent.com/Loyalsoldier/v2ray-rules-dat/release/reject-list.txt | sed -e "s/^/'+./"  -e "s/$/'/" >> reject.txt
         sort -u reject.txt -o reject.txt
 
     - name: Run ip rules
@@ -35,6 +35,7 @@ jobs:
         # text format
         cat chnroutes.txt CN.txt | sort -u > cnip.txt 
         cat lancidr.txt | sed  -e "s/^  - '//" -e  "s/'//" >> cnip.txt
+
         # yaml format
         echo "payload:" > CNIP.yaml 
         cat chnroutes.txt CN.txt | sort -u | sed -e "s/^/  - '/" -e "s/$/'/"  >> CNIP.yaml
@@ -60,7 +61,7 @@ jobs:
         sed -i '/hostloc.com/d' accelerated-domains.china.conf
         sed -i '/apps.apple.com/d' apple.china.conf
         # Clash rule text format
-        cat accelerated-domains.china.conf apple.china.conf google.china.conf  | sed 's/^/+./' > direct.txt 
+        cat accelerated-domains.china.conf apple.china.conf google.china.conf  | sed -e "s/^/'+./"  -e "s/$/'/" > direct.txt 
         
         # Clash rule yaml format
         echo "payload:" > directbak.yaml
