--- a/.github/workflows/clash-rule.yml
+++ b/.github/workflows/clash-rule.yml
@@ -23,8 +23,8 @@ jobs:
       
     - name: Run BanAD rules
       run: | 
-        curl -s https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-domains.txt | sed -e '/#/d' -e "s/^/'+./"  -e "s/$/'/" > reject.txt
-        curl -s https://raw.githubusercontent.com/Loyalsoldier/v2ray-rules-dat/release/reject-list.txt | sed -e "s/^/'+./"  -e "s/$/'/" >> reject.txt
+        curl -s https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-domains.txt | sed -e '/#/d' -e "s/^/+./" > reject.txt
+        curl -s https://raw.githubusercontent.com/Loyalsoldier/v2ray-rules-dat/release/reject-list.txt | sed -e "s/^/+./"   >> reject.txt
         sort -u reject.txt -o reject.txt
 
     - name: Run ip rules
@@ -62,8 +62,8 @@ jobs:
         sed -i '/hostloc.com/d' accelerated-domains.china.conf
         sed -i '/apps.apple.com/d' apple.china.conf
         # Clash rule text format
-        cat accelerated-domains.china.conf apple.china.conf google.china.conf  | sed -e "s/^/'+./"  -e "s/$/'/" > direct.txt 
-        curl -sSL https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/private.txt| sed -e '/payload:/d' -e "s/  - //" >> direct.txt
+        cat accelerated-domains.china.conf apple.china.conf google.china.conf  | sed -e "s/^/+./"  > direct.txt 
+        curl -sSL https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/private.txt| sed -e '/payload:/d' -e "s/  - '//" -e "s/'//" >> direct.txt
         
         # Clash rule yaml format
         echo "payload:" > directbak.yaml
