--- a/.github/workflows/clash-rule.yml
+++ b/.github/workflows/clash-rule.yml
@@ -15,17 +15,15 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-   
-    - name: Run White rules
-      run: | 
-        awk '/payload/, /#end/' process.yaml > tmpfile && mv tmpfile process.yaml
-        curl -sL https://raw.githubusercontent.com/privacy-protection-tools/dead-horse/master/anti-ad-white-list.txt | sort -u | sed 's/^/  - DOMAIN-SUFFIX, /'  >> process.yaml
-      
+
     - name: Run BanAD rules
       run: | 
-        curl -s https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-domains.txt | sed -e '/#/d' -e "s/^/+./" > reject.txt
-        curl -s https://raw.githubusercontent.com/Loyalsoldier/v2ray-rules-dat/release/reject-list.txt | sed -e "s/^/+./"   >> reject.txt
-        sort -u reject.txt -o reject.txt
+        curl -s https://ruleset.skk.moe/List/domainset/reject.conf | sed -e '/#/d' -e 's/^\.//'  > sukka-reject.txt
+        curl -s https://raw.githubusercontent.com/Loyalsoldier/v2ray-rules-dat/release/reject-list.txt > loyal-reject.txt
+        # curl -s https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-domains.txt | sed -e '/#/d' > anti-reject.txt
+        cat *-reject.txt | sort -u | sed 's/^/+./' > reject.txt
+        sed -i "1i # $(echo Total: $(wc -l <reject.txt) lines\; Last Updated: $(date) )" reject.txt
+        rm -rf *-reject.txt
 
     - name: Run ip rules
       run: |
