--- a/.github/workflows/clash-rule.yml
+++ b/.github/workflows/clash-rule.yml
@@ -27,18 +27,13 @@ jobs:
 
     - name: Run cnip rules
       run: |
-        curl -s https://raw.githubusercontent.com/misakaio/chnroutes2/master/chnroutes.txt | sed "/#/d" > chnroutes.txt
-        curl -s https://raw.githubusercontent.com/tmplink/IPDB/main/ipv4/cidr/CN.txt > CN.txt
-        curl -s https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/lancidr.txt | sed   -e '/payload/d' -e "s/^  - '//" -e  "s/'//" > lancidr.txt
-        # text format
-        cat chnroutes.txt CN.txt | sort -u > cnip.txt 
-        cat lancidr.txt  >> cnip.txt
+        curl -s https://raw.githubusercontent.com/tmplink/IPDB/main/ipv4/cidr/CN.txt > cnip.txt 
+        # curl -s https://raw.githubusercontent.com/misakaio/chnroutes2/master/chnroutes.txt | sed "/#/d" >> cnip.txt
+        curl -s https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/lancidr.txt | sed   -e '/payload/d' -e "s/^  - '//" -e  "s/'//" >> cnip.txt
+        # text format: cnip.txt
 
         # yaml format
         sed -e "s/^/  - \'/" -e "s/$/\'/" -e "1i payload:" cnip.txt > CNIP.yaml
-
-        # Delete tmp file
-        rm -rf chnroutes.txt CN.txt lancidr.txt
         
         # GoogleIP
         echo "payload:" > ./GoogleIP.yaml
