--- a/.github/workflows/clash-rule.yml
+++ b/.github/workflows/clash-rule.yml
@@ -46,6 +46,7 @@ jobs:
       run: |
         curl -s https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt | sed   -e '/payload/d' -e "s/^  - '//" -e  "s/'//" > proxy.txt
         curl -s https://raw.githubusercontent.com/Kr328/V2rayDomains2Clash/generated/category-porn.yaml | sed -e "/#/d" -e "/payload:/d" -e '/^$/d' -e 's/- "//' -e 's/"//' >> proxy.txt
+        curl -s https://raw.githubusercontent.com/Kr328/V2rayDomains2Clash/generated/lark.yaml | sed -e "/#/d" -e "/payload:/d" -e '/^$/d' -e 's/- "//' -e 's/"//' >> proxy.txt
         sort -u proxy.txt -o proxy.txt 
 
     - name: Run CN domain rules
