--- a/.github/workflows/clash-rule.yml
+++ b/.github/workflows/clash-rule.yml
@@ -45,8 +45,8 @@ jobs:
     - name: Run proxy rules
       run: |
         curl -s https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt | sed   -e '/payload/d' -e "s/^  - '//" -e  "s/'//" > proxy.txt
-        curl -s https://raw.githubusercontent.com/Kr328/V2rayDomains2Clash/generated/category-porn.yaml | sed -e "/#/d" -e "/payload:/d" -e '/^$/d' -e 's/- "//' -e 's/"//' >> proxy.txt
-        curl -s https://raw.githubusercontent.com/Kr328/V2rayDomains2Clash/generated/lark.yaml | sed -e "/#/d" -e "/payload:/d" -e '/^$/d' -e 's/- "//' -e 's/"//' >> proxy.txt
+        # curl -s https://raw.githubusercontent.com/Kr328/V2rayDomains2Clash/generated/category-porn.yaml | sed -e "/#/d" -e "/payload:/d" -e '/^$/d' -e 's/- "//' -e 's/"//' >> proxy.txt
+        # curl -s https://raw.githubusercontent.com/Kr328/V2rayDomains2Clash/generated/lark.yaml | sed -e "/#/d" -e "/payload:/d" -e '/^$/d' -e 's/- "//' -e 's/"//' >> proxy.txt
         sort -u proxy.txt -o proxy.txt 
 
     - name: Run CN domain rules
@@ -67,8 +67,9 @@ jobs:
         # Clash rule text format
         # cat accelerated-domains.china.conf apple.china.conf google.china.conf  | sed -e "s/^/+./"  -e /^\+\.top$/d > direct.txt 
         #(include microsoft@cn apple@cn google@cn and etc)
-        curl -s https://raw.githubusercontent.com/Kr328/V2rayDomains2Clash/generated/geolocation-%21cn@cn.yaml | sed -e "/#/d" -e "/payload:/d" -e '/^$/d' -e 's/- "//' -e 's/"//' > direct.txt 
+        # curl -s https://raw.githubusercontent.com/Kr328/V2rayDomains2Clash/generated/geolocation-%21cn@cn.yaml | sed -e "/#/d" -e "/payload:/d" -e '/^$/d' -e 's/- "//' -e 's/"//' > direct.txt 
         # curl -s https://raw.githubusercontent.com/Kr328/V2rayDomains2Clash/generated/geolocation-cn.yaml | sed -e "/#/d" -e "/payload:/d" -e '/^$/d' -e 's/- "//' -e 's/"//' >> direct.txt 
+        curl -s https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/google.txt | sed -e '/payload:/d' -e "s/^  - '//" -e "s/'$//" > direct.txt 
         curl -s https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/private.txt| sed -e '/payload:/d' -e "s/^  - '//" -e "s/'$//" >> direct.txt
         sort -u direct.txt -o direct.txt
 
