--- a/.github/workflows/clash-rule.yml
+++ b/.github/workflows/clash-rule.yml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Run BanAD rules
       run: | 
-        curl -s https://ruleset.skk.moe/List/domainset/reject.conf | sed -e '/#/d' -e 's/^\.//'  > sukka-reject.txt
+        curl -s https://ruleset.skk.moe/List/domainset/reject.conf | sed -e '/#/d' -e 's/^\.//' -e '/\.$/d' > sukka-reject.txt
         curl -s https://raw.githubusercontent.com/Loyalsoldier/v2ray-rules-dat/release/reject-list.txt > loyal-reject.txt
         curl -s https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-domains.txt | sed -e '/#/d' > anti-reject.txt
         cat *-reject.txt | sort -u | sed 's/^/+./' > reject.txt
