--- a/.github/workflows/clash-rule.yml
+++ b/.github/workflows/clash-rule.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Run cnip rules
       run: |
         curl -s https://raw.githubusercontent.com/tmplink/IPDB/main/ipv4/cidr/CN.txt > cnip.txt 
-        # curl -s https://raw.githubusercontent.com/misakaio/chnroutes2/master/chnroutes.txt | sed "/#/d" >> cnip.txt
+        curl -s https://raw.githubusercontent.com/misakaio/chnroutes2/master/chnroutes.txt | sed "/#/d" >> cnip.txt
         curl -s https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/lancidr.txt | sed   -e '/payload/d' -e "s/^  - '//" -e  "s/'//" >> cnip.txt
         # text format: cnip.txt
 
