--- a/.github/workflows/clash-rule.yml
+++ b/.github/workflows/clash-rule.yml
@@ -49,7 +49,7 @@ jobs:
         #tld-!cn
         curl -s https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/tld-!cn.list  >> proxy.txt
         # curl -s https://raw.githubusercontent.com/Kr328/V2rayDomains2Clash/generated/lark.yaml | sed -e "/#/d" -e "/payload:/d" -e '/^$/d' -e 's/- "//' -e 's/"//' >> proxy.txt
-        cat custom/reject.txt | sed -e '/^#/d' -e '/^\s*$/d' -e 's/^/+./' >> proxy.txt 
+        cat custom/proxy.txt | sed -e '/^#/d' -e '/^\s*$/d' -e 's/^/+./' >> proxy.txt 
         sort -u proxy.txt -o proxy.txt 
         sed -i "1i # $(echo Total: $(wc -l <proxy.txt) lines\; Last Updated: $(date) )" proxy.txt
         
