--- a/.github/workflows/clash-rule.yml
+++ b/.github/workflows/clash-rule.yml
@@ -49,15 +49,15 @@ jobs:
         #tld-!cn
         curl -s https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/tld-!cn.list  >> proxy.txt
         # curl -s https://raw.githubusercontent.com/Kr328/V2rayDomains2Clash/generated/lark.yaml | sed -e "/#/d" -e "/payload:/d" -e '/^$/d' -e 's/- "//' -e 's/"//' >> proxy.txt
-        cat custom/proxy.txt | sed -e '/^#/d' -e '/^\s*$/d' -e 's/^/+./' >> proxy.txt 
-        # sort -u proxy.txt -o proxy.txt 
-        # sed -i "1i # $(echo Total: $(wc -l <proxy.txt) lines\; Last Updated: $(date) )" proxy.txt
+        echo "" >> proxy.txt && cat custom/proxy.txt | sed -e '/^#/d' -e '/^\s*$/d' -e 's/^/+./' >> proxy.txt 
+        sort -u proxy.txt -o proxy.txt 
+        sed -i "1i # $(echo Total: $(wc -l <proxy.txt) lines\; Last Updated: $(date) )" proxy.txt
         
     - name: Run direct rules
       run: |
          curl -s https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/private.list > direct.txt
          curl -s https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/google-cn.list  >> direct.txt
-         cat custom/direct.txt | sed -e '/^#/d' -e '/^\s*$/d' -e 's/^/+./' >> direct.txt 
+         echo "" >> direct.txt && cat custom/direct.txt | sed -e '/^#/d' -e '/^\s*$/d' -e 's/^/+./' >> direct.txt 
          sed -i "1i # $(echo Total: $(wc -l <direct.txt) lines\; Last Updated: $(date) )" direct.txt
 
     - name: Run CN-IP rules
